<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ActivityAccountCreationHobbies">


<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/AC_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AC_hobbies_title"
        android:textAlignment="center"
        android:textSize="25sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:columnCount="3"
        android:padding="10dp"
        android:rowCount="3">

        <CheckBox
            android:id="@+id/reading"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:onClick="selectItem"
            android:text="@string/AC_reading"
            android:theme="@style/colored_checkBox" />

        <CheckBox
            android:id="@+id/traveling"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:text="@string/AC_traveling"
            android:theme="@style/colored_checkBox"
            android:onClick="selectItem"/>

        <CheckBox
            android:id="@+id/fishing"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:text="@string/AC_fishing"
            android:theme="@style/colored_checkBox"
            android:onClick="selectItem"/>

        <CheckBox
            android:id="@+id/crafts"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:text="@string/AC_crafts"
            android:theme="@style/colored_checkBox"
            android:onClick="selectItem"/>

        <CheckBox
            android:id="@+id/television"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:text="@string/AC_television"
            android:theme="@style/colored_checkBox"
            android:onClick="selectItem"/>

        <CheckBox
            android:id="@+id/bird_watching"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:text="@string/AC_bird_watching"
            android:theme="@style/colored_checkBox"
            android:onClick="selectItem"/>

        <CheckBox
            android:id="@+id/collecting"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:text="@string/AC_collecting"
            android:theme="@style/colored_checkBox"
            android:onClick="selectItem"/>

        <CheckBox
            android:id="@+id/music"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:text="@string/AC_music"
            android:theme="@style/colored_checkBox"
            android:onClick="selectItem"/>

        <CheckBox
            android:id="@+id/gardening"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:text="@string/AC_gardening"
            android:theme="@style/colored_checkBox"
            android:onClick="selectItem"/>
        <CheckBox
            android:id="@+id/video_games"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:text="@string/AC_video_games"
            android:theme="@style/colored_checkBox"
            android:onClick="selectItem"/>
        <CheckBox
            android:id="@+id/cooking"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:text="@string/AC_cooking"
            android:theme="@style/colored_checkBox"
            android:onClick="selectItem"/>
        <CheckBox
            android:id="@+id/camping"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:button="@drawable/image_checkbox"
            android:text="@string/AC_camping"
            android:theme="@style/colored_checkBox"
            android:onClick="selectItem"/>



    </GridLayout>



    <Button
        android:id="@+id/bt1_hobbies"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_button1"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="20sp" />


</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>